Removing payment dependencies
