# internal/controller/serializer/input/product.go
@@ -3,7 +3,7 @@ package input
 import "github.com/ViniAlvesMartins/tech-challenge-fiap/internal/entities/entity"
 
 type ProductDto struct {
-	NameProduct string  `json:"name_product" validate:"required"`
+	ProductName string  `json:"product_name" validate:"required"`
 	Description string  `json:"description" validate:"required"`
 	Price       float32 `json:"price" validate:"required,gt=0" error:"O Número deve ser maior que zero"`
 	CategoryId  int     `json:"category_id" validate:"required"`
@@ -11,7 +11,7 @@ type ProductDto struct {
 
 func (p *ProductDto) ConvertToEntity() entity.Product {
 	return entity.Product{
-		NameProduct: p.NameProduct,
+		ProductName: p.ProductName,
 		Description: p.Description,
 		Price:       p.Price,
 		CategoryId:  p.CategoryId,
